# dat200-ca2-fetal-health-ml

./: .gitignore  CA2.ipynb  CA2.py  README.md  pyproject.toml
assets/: fetal_health.csv
