[project]
name = "ca2-supervised-medical-ml-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.15.3",
    "matplotlib>=3.10.6",
    "mlxtend>=0.23.4",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
]
